#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([randpass], [1.0])
AC_CONFIG_SRCDIR([src/randpass.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([no-dependencies])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h unistd.h getopt.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile man/Makefile tests/Makefile)
